--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
     "react-redux-loading": "^1.0.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-thunk": "^1.0.0"
   },
