--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-redux-loading": "^1.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
     "redux-thunk": "^1.0.0"
   },
   "scripts": {
